# Oclushion

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .prettierignore  README.md  compose.prod.yaml  compose.yaml  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  scratch.mjs  tsconfig.tests.json  turbo.json
.github/workflows/: cdn-publish.yml  ci.yml  codeql.yml
apps/browser-extension/: package.json  tsconfig.json
apps/control-api/: .dockerignore  Dockerfile  package.json  vitest.config.ts
apps/desktop-shell/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-shell/src-tauri/capabilities/: default.json  workspace.json
apps/desktop-shell/src-tauri/src/: keychain.rs  lib.rs  llm.rs  main.rs  terminal.rs
apps/web/: Dockerfile  instrumentation-client.ts  next.config.ts  package.json  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json
apps/web/app/: robots.ts  (+5 more)
deploy/control-api/: Chart.yaml  values.yaml
deploy/monitoring/: prometheus-alerts.yml  prometheus.yml
infra/terraform/: .gitignore  main.tf  variables.tf
scripts/: build-marketplace-catalog.mjs  curate-antigravity-skills.mjs  db-backup.sh  db-restore.sh  deploy.sh  dr-test-restore.sh  fix-zod-record.cjs  generate-fallback.mjs  generate-updater-keys.mjs  import-aitmpl-catalog.mjs  import-aitmpl-local.mjs  qa-i18n.mjs  recover-critical-skills.mjs  security-scan.sh  sign-release.mjs  ts-ignore-all.cjs  validate-i18n.mjs
(+512 files in other folders)
