[package]
name = "oclushion_desktop_shell"
version = "1.0.0"
description = "Oclushion AI development IDE desktop shell"
authors = ["Oclushion"]
license = "MIT"
repository = "https://github.com/oclushion/oclushion"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oclushion_desktop_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2.3.0"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.3.0"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-updater = "2.6.0"
tauri-plugin-opener = "2.2.6"
tauri-plugin-shell = "2.3.5"
tauri-plugin-notification = "2.3.0"
keyring = "3.2.2"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
futures-util = "0.3.32"
serde_json = "1.0.150"
# Dependabot alert: glib <0.20.0 transitively pulled via gtk 0.18.x (UNMAINTAINED)
# through muda → tauri. Linux-only. Fix requires Tauri GTK4 migration (PR #14684).

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.20"
